# discord-rpc

./: .gitignore  CMakeLists.txt  CMakeSettings.json
include/: discord_rpc.h
src/: serialization.cpp
